# pocket-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pocket-engine.sln  pocket_engine.cbp
assets/: map.json  map1.txt
cmake/: FindLuaJIT.cmake
pocket-engine/: pocket-engine.vcxproj  pocket-engine.vcxproj.filters
pocket-engine/assets/: map.json
pocket-engine/shaders/: basic.frag  basic.vert
pocket-engine/src/: main.cpp
pocket-engine/src/pocket/: pocket.hpp
pocket-engine/src/pocket/IO/: pkfile.cpp  pkfile.hpp
pocket-engine/src/pocket/components/: animator.cpp  animator.hpp  collider.hpp  map.hpp  map_manager.cpp  map_manager.hpp  movement.cpp  movement.hpp  player_controller.cpp  player_controller.hpp  sprite.cpp  sprite.hpp  tilemap.cpp  tilemap.hpp  tilemap_animator.cpp  tilemap_animator.hpp
pocket-engine/src/pocket/containers/: containers.hpp  string.cpp  string.hpp  vector.hpp
pocket-engine/src/pocket/core/: content.cpp  content.hpp  engine.cpp  engine.hpp  factory.cpp  factory.hpp  time.cpp  time.hpp  types.hpp  window.cpp  window.hpp  world.cpp  world.hpp
pocket-engine/src/pocket/debug/: benchmark.hpp
pocket-engine/src/pocket/graphics/: batch.cpp  batch.hpp  font.cpp  font.hpp  gfx_api.h  graphics.cpp  graphics.hpp  shader.hpp  texture.cpp  texture.hpp
pocket-engine/src/pocket/input/: input.cpp  input.hpp
pocket-engine/src/pocket/json/: parser.hpp  readfile.cpp  token.hpp  value.hpp
pocket-engine/src/pocket/math/: mat.hpp  matmath.cpp  rect.hpp  vec.hpp  vecmath.cpp
pocket-engine/src/pocket/scripts/: script_manager.cpp  script_manager.hpp
pocket-engine/src/pocket/threads/: thread_pool.hpp
pocket-engine/src/pocket/util/: pkassert.h
pocket-engine/tiled/: map.tmx  tileset.tsx
pocket-engine/x64/Debug/: pocket-engine.exe.recipe  vc142.idb
pocket-engine/x64/Debug/pocket-engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pocket-engine.lastbuildstate
pocket-engine/x64/Release/: pocket-engine.exe.recipe
pocket-engine/x64/Release/pocket-engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pocket-engine.lastbuildstate  pocket-engine.write.1u.tlog
shaders/: basic.frag  basic.vert
src/: main.c  main.cpp
src/framework/: crash.hpp  engine.cpp  engine.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  mat.hpp  matmath.cpp  matmath.hpp  pkassert.h  pkfile.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp  types.hpp  vec.hpp  vecmath.cpp  vecmath.hpp  vector.hpp  window.cpp  window.hpp
src/pocket/: engine.cpp  engine.hpp  types.hpp  window.cpp  window.hpp  world.cpp  world.hpp
src/pocket/IO/: pkfile.cpp  pkfile.hpp
src/pocket/components/: player_controller.cpp  player_controller.hpp  sprite.cpp  sprite.hpp  tilemap.cpp  tilemap.hpp
src/pocket/containers/: vector.hpp
src/pocket/ecs/: ecs.hpp  other.hpp
src/pocket/game/: character.cpp  character.hpp  entity.cpp  entity.hpp  tilemap.cpp  tilemap.hpp
src/pocket/graphics/: batch.cpp  batch.hpp  gfx_api.h  graphics.cpp  graphics.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp  tilemap.cpp  tilemap.hpp
src/pocket/input/: input.cpp  input.hpp
src/pocket/json/: deserializer.cpp  deserializer.hpp  json.hpp  parser.cpp  parser.hpp  readfile.cpp  readfile.hpp  token.hpp  typedefs.hpp  value.hpp
src/pocket/math/: constants.cpp  constants.hpp  mat.hpp  matmath.cpp  matmath.hpp  rect.hpp  vec.hpp  vecmath.cpp  vecmath.hpp
src/pocket/util/: crash.hpp  pkassert.h
tiled/: map.tmx  tileset.tsx
web_version/: pocket.data  pocket.html  pocket.js
x64/Debug/: pocket-engine.ilk
x64/Release/: pocket-engine.iobj  pocket-engine.ipdb
